feat: migrate shared files to server-side pagination
