# backend/docs/swagger.yaml
@@ -1,6 +1,8 @@
 definitions:
   datatypes.JSONType-array_string:
     type: object
+  datatypes.JSONType-github_com_raids-lab_crater_dao_model_ExtraContent:
+    type: object
   datatypes.JSONType-github_com_raids-lab_crater_dao_model_QueueQuota:
     type: object
   datatypes.JSONType-v1_ResourceList:
@@ -424,6 +426,19 @@ definitions:
       total:
         type: integer
     type: object
+  github_com_raids-lab_crater_internal_resputil.Page-internal_handler_DatasetResp:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/internal_handler.DatasetResp'
+        type: array
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total:
+        type: integer
+    type: object
   github_com_raids-lab_crater_internal_resputil.Page-internal_handler_JobTemplateresp:
     properties:
       items:
@@ -556,6 +571,16 @@ definitions:
         type: integer
       data:
         $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.List-internal_handler_operations_OperationLogResp'
+      msg:
+        type: string
+    type: object
+  ? github_com_raids-lab_crater_internal_resputil.Response-github_com_raids-lab_crater_internal_resputil_Page-internal_handler_DatasetResp
+  : properties:
+      code:
+        description: 依然保持 int (ErrorCode) 类型
+        type: integer
+      data:
+        $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Page-internal_handler_DatasetResp'
       msg:
         type: string
     type: object
@@ -1405,6 +1430,65 @@ definitions:
     - describe
     - name
     - url
+    type: object
+  internal_handler.DatasetResp:
+    properties:
+      createdAt:
+        type: string
+      describe:
+        type: string
+      displayName:
+        type: string
+      downloadCount:
+        type: integer
+      extra:
+        $ref: '#/definitions/datatypes.JSONType-github_com_raids-lab_crater_dao_model_ExtraContent'
+      id:
+        type: integer
+      library:
+        type: string
+      license:
+        type: string
+      likes:
+        type: integer
+      loginRequired:
+        type: boolean
+      modelType:
+        type: string
+      mountCount:
+        type: integer
+      name:
+        type: string
+      organization:
+        type: string
+      organizationUrl:
+        type: string
+      parameterCount:
+        type: integer
+      readme:
+        type: string
+      sizeBytes:
+        type: integer
+      source:
+        type: string
+      sourceCreatedAt:
+        type: string
+      sourceGated:
+        type: boolean
+      sourcePrivate:
+        type: boolean
+      sourceUpdatedAt:
+        type: string
+      task:
+        type: string
+      type:
+        $ref: '#/definitions/github_com_raids-lab_crater_dao_model.DataType'
+      updatedAt:
+        type: string
+      url:
+        type: string
+      userInfo:
+        $ref: '#/definitions/github_com_raids-lab_crater_dao_model.UserInfo'
     type: object
   internal_handler.DeleteProjectResp:
     properties:
@@ -6425,6 +6509,54 @@ paths:
       security:
       - Bearer: []
       summary: 获取数据集
+      tags:
+      - Dataset
+  /v1/dataset/mydataset/page:
+    get:
+      description: 按权限、类型、搜索和排序条件过滤后分页返回数据资源
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Page size, 1-200
+        in: query
+        name: page_size
+        type: integer
+      - description: Search name or description
+        in: query
+        name: search
+        type: string
+      - description: 'Owner scope: all, mine, or others'
+        in: query
+        name: owner
+        type: string
+      - description: Sort by createdAt, updatedAt, or mountCount
+        in: query
+        name: sort
+        type: string
+      - description: 'Resource type: dataset, model, or sharefile'
+        in: query
+        name: type
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-github_com_raids-lab_crater_internal_resputil_Page-internal_handler_DatasetResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_raids-lab_crater_internal_resputil.Response-any'
+      security:
+      - Bearer: []
+      summary: 获取可访问数据资源分页
       tags:
       - Dataset
   /v1/dataset/share/queue:
